Organização da estrutura geral do código

--- a/splitted-elements/about-journal.html
+++ b/splitted-elements/about-journal.html
@@ -1,38 +1,93 @@
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Foco e escopo</p>
-<p style="text-align: justify;"><em>Os Cadernos do GPOSSHE On-line</em> são uma publicação semestral do Grupo de Pesquisa Ontologia do Ser Social, História, Educação e Emancipação Humana – GPOSSHE, que faz parte do Instituto de Estudos e Pesquisas do Movimento Operário – IMO. O GPOSSHE está vinculado ao Programa de Pós-graduação em Educação da Universidade Estadual do Ceará (PPGE-UECE). Seu objetivo é tornar público artigos resultantes de estudos e pesquisas e abordem temas de ciências humanas, em particular de educação, história e questão social, a partir das coordenadas teóricas do humanismo, do historicismo concreto e da razão dialética. Também compõem o escopo da revista a publicação de resenhas de obras relevantes para os debates nas referidas áreas, sejam elas de autores(as) nacionais ou estrangeiros(as).</p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Processo de avaliação pelos pares</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Foco e escopo
+</p>
+<p style="text-align: justify;">
+    <em>Os Cadernos do GPOSSHE On-line</em> são uma publicação semestral do Grupo de Pesquisa Ontologia do Ser Social, História, Educação e Emancipação Humana – GPOSSHE, que faz parte do Instituto de Estudos e Pesquisas do Movimento
+    Operário – IMO. O GPOSSHE está vinculado ao Programa de Pós-graduação em Educação da Universidade Estadual do Ceará (PPGE-UECE). Seu objetivo é tornar público artigos resultantes de estudos e pesquisas e abordem temas de ciências
+    humanas, em particular de educação, história e questão social, a partir das coordenadas teóricas do humanismo, do historicismo concreto e da razão dialética. Também compõem o escopo da revista a publicação de resenhas de obras
+    relevantes para os debates nas referidas áreas, sejam elas de autores(as) nacionais ou estrangeiros(as).
+</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Processo de avaliação pelos pares
+</p>
 <div>
-<p style="text-align: justify;">Após o recebimento dos artigos, inicialmente serão revisados, efetivando, desta forma, uma triagem a partir da análise se os manuscritos estão adequados às normas da revista. Por conseguinte, a editoria direciona o trabalho à avaliação autônoma de no mínimo dois avaliadores (método de “duplo cego”), cujas áreas de competência e formação acadêmica estejam relacionadas com o objeto do texto. Caso haja divergência entre os pareceristas, o trabalho deverá ser designado a um terceiro avaliador.</p>
-<p style="text-align: justify;">Ao final do processo, os autores recebem comunicação relativa aos pareceres emitidos, garantindo-se a confidencialidade dos pareceristas.</p>
-<p>Há três opções:</p>
-<ol>
-<li class="show">Aceitação do artigo;</li>
-<li class="show">Aceitação do artigo com revisões sugeridas pelos pareceristas e;</li>
-<li class="show">Recusa.</li>
-</ol>
-<p style="text-align: justify;">Recursos e problemas específicos são examinados e decididos pelos Editores.</p>
-<p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em> trabalha com a <em>"avaliação cega"</em>, em que os avaliadores não identificam os autores das contribuições e vice-versa.</p>
+    <p style="text-align: justify;">
+        Após o recebimento dos artigos, inicialmente serão revisados, efetivando, desta forma, uma triagem a partir da análise se os manuscritos estão adequados às normas da revista. Por conseguinte, a editoria direciona o trabalho à
+        avaliação autônoma de no mínimo dois avaliadores (método de “duplo cego”), cujas áreas de competência e formação acadêmica estejam relacionadas com o objeto do texto. Caso haja divergência entre os pareceristas, o trabalho deverá
+        ser designado a um terceiro avaliador.
+    </p>
+    <p style="text-align: justify;">Ao final do processo, os autores recebem comunicação relativa aos pareceres emitidos, garantindo-se a confidencialidade dos pareceristas.</p>
+    <p>Há três opções:</p>
+    <ol>
+        <li class="show">Aceitação do artigo;</li>
+        <li class="show">Aceitação do artigo com revisões sugeridas pelos pareceristas e;</li>
+        <li class="show">Recusa.</li>
+    </ol>
+    <p style="text-align: justify;">Recursos e problemas específicos são examinados e decididos pelos Editores.</p>
+    <p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em> trabalha com a <em>"avaliação cega"</em>, em que os avaliadores não identificam os autores das contribuições e vice-versa.</p>
 </div>
 <p style="text-align: justify;">A convocação de avaliadores se dá pela Comissão Editorial, levando em conta a <em>expertise</em> dos pesquisadores nos temas relacionados à educação.</p>
 <p style="text-align: justify;">A avaliação dos manuscritos levará em consideração os seguintes critérios: originalidade, consistência teórica e metodológica, relevância para a área e atendimento às normas da revista.</p>
 <p style="text-align: justify;">O tempo para avaliação das submissões será de até 6 meses.</p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Periodicidade</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Periodicidade
+</p>
 <p style="text-align: justify;"><em>Cadernos do GPOSSHE On-line</em> possue periodicidade <em>semestral</em>, <em>fluxo contínuo</em> e <em>ahead of print</em>.</p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Política de acesso livre</p>
-<p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em> oferece acesso livre e imediato ao seu conteúdo, seguindo o princípio de que disponibilizar gratuitamente o conhecimento científico ao público proporciona maior democratização mundial do conhecimento.</p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Arquivamento</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Política de acesso livre
+</p>
+<p style="text-align: justify;">
+    Os <em>Cadernos do GPOSSHE On-line</em> oferece acesso livre e imediato ao seu conteúdo, seguindo o princípio de que disponibilizar gratuitamente o conhecimento científico ao público proporciona maior democratização mundial do
+    conhecimento.
+</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Arquivamento
+</p>
 <div class="separator">
-<div id="archiving">
-<p style="text-align: justify;">Esta revista utiliza o sistema <a href="https://clockss.org/" target="_blank" rel="noopener">CLOCKSS</a> e <a href="http://www.lockss.org/" target="_blank" rel="noopener">LOCKSS</a> para criar um sistema de arquivo distribuído entre as bibliotecas participantes e permite às mesmas criar arquivos permanentes da revista para a preservação e restauração.</p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Política de privacidade</p>
-<p style="text-align: justify;">Os autores possuem direitos autorais, sem restrição, aos seus textos.</p>
-<p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em> permite ao autor os direitos de publicação.</p>
-<p style="text-align: justify;">Os nomes e endereços informados nesta revista serão usados exclusivamente para os serviços prestados por esta publicação, não sendo disponibilizados para outras finalidades ou a terceiros.</p>
-<p style="text-align: justify;">Por critérios de ética em pesquisa, todos os artigos serão submetidos ao programa antiplágio <a title="CopySpider" href="https://copyspider.com.br" target="_blank" rel="noopener"><em>Copyspider</em></a>.</p>
-<p id="yui_3_16_0_ym19_1_1492424942053_11912" dir="ltr" data-setdir="false"><a id="yui_3_16_0_ym19_1_1492424942053_11913" title="License CC4.0" href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="license noopener"><img id="yui_3_16_0_ym19_1_1492424942053_11914" class="img-overlay-selected" src="https://revistas.uece.br/public/site/images/frederico/88x31.png" alt="Licença Creative Commons" width="88" height="31" data-id="88385af7-3cf8-74ee-4f83-2aba5d948c83" /></a><br id="yui_3_16_0_ym19_1_1492424942053_11915" />Os trabalhos estão licenciados com uma Licença <a id="yui_3_16_0_ym19_1_1492424942053_11916" href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons - Atribuição-NãoComercial 4.0 Internacional</a></p>
+    <div id="archiving">
+        <p style="text-align: justify;">
+            Esta revista utiliza o sistema <a href="https://clockss.org/" target="_blank" rel="noopener">CLOCKSS</a> e <a href="http://www.lockss.org/" target="_blank" rel="noopener">LOCKSS</a> para criar um sistema de arquivo distribuído
+            entre as bibliotecas participantes e permite às mesmas criar arquivos permanentes da revista para a preservação e restauração.
+        </p>
+        <p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+            Política de privacidade
+        </p>
+        <p style="text-align: justify;">Os autores possuem direitos autorais, sem restrição, aos seus textos.</p>
+        <p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em> permite ao autor os direitos de publicação.</p>
+        <p style="text-align: justify;">Os nomes e endereços informados nesta revista serão usados exclusivamente para os serviços prestados por esta publicação, não sendo disponibilizados para outras finalidades ou a terceiros.</p>
+        <p style="text-align: justify;">
+            Por critérios de ética em pesquisa, todos os artigos serão submetidos ao programa antiplágio <a title="CopySpider" href="https://copyspider.com.br" target="_blank" rel="noopener"><em>Copyspider</em></a>.
+        </p>
+        <p id="yui_3_16_0_ym19_1_1492424942053_11912" dir="ltr" data-setdir="false">
+            <a id="yui_3_16_0_ym19_1_1492424942053_11913" title="License CC4.0" href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="license noopener">
+                <img
+                    id="yui_3_16_0_ym19_1_1492424942053_11914"
+                    class="img-overlay-selected"
+                    src="https://revistas.uece.br/public/site/images/frederico/88x31.png"
+                    alt="Licença Creative Commons"
+                    width="88"
+                    height="31"
+                    data-id="88385af7-3cf8-74ee-4f83-2aba5d948c83"
+                />
+            </a>
+            <br id="yui_3_16_0_ym19_1_1492424942053_11915" />
+            Os trabalhos estão licenciados com uma Licença <a id="yui_3_16_0_ym19_1_1492424942053_11916" href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons - Atribuição-NãoComercial 4.0 Internacional</a>
+        </p>
+    </div>
 </div>
-</div>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Não cobramos taxas para submissão e publicação de textos</p>
-<p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em>, editado pelo Grupo de Pesquisa Ontologia do Ser Social, História, Educação e Emancipação Humana (GPOSSHE), não cobra nenhuma taxa por textos publicados e tampouco pelos submetidos para avaliação, revisão, publicação, distribuição ou download.<span id="result_box" class="" lang="en" tabindex="-1"></span></p>
-<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 .357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">Declaração de Ética e Conduta e Boas Práticas</p>
-<p style="text-align: justify;">Os <em>Cadernos do GPOSSHE On-line</em>, dedica-se a cumprir as boas práticas no que diz respeito à conduta moral condizente com a editoração cientifica de periódicos. A prevenção da negligência também é uma responsabilidade crucial do editor e da equipe editorial: qualquer forma de comportamento antiético, bem como o plágio em qualquer instância, não é aceito nos <em>Cadernos do GPOSSHE On-line</em> . Os autores que enviam artigos para a revista declaram que seu conteúdo é original e garantem que o trabalho não foi publicado nem está em processo de revisão/avaliação em nenhum outro periódico. Em cada número. Além disso, <em>os Cadernos do GPOSSHE On-line</em> segue as <a title="COPE" href="https://publicationethics.org/files/Research_institutions_guidelines_final_0_0.pdf" target="_blank" rel="noopener">Boas <em>Práticas e Orientação do Comitê de Publicação e Ética (COPE)</em></a><strong>.</strong></p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Não cobramos taxas para submissão e publicação de textos
+</p>
+<p style="text-align: justify;">
+    Os <em>Cadernos do GPOSSHE On-line</em>, editado pelo Grupo de Pesquisa Ontologia do Ser Social, História, Educação e Emancipação Humana (GPOSSHE), não cobra nenhuma taxa por textos publicados e tampouco pelos submetidos para avaliação,
+    revisão, publicação, distribuição ou download.<span id="result_box" class="" lang="en" tabindex="-1"></span>
+</p>
+<p style="text-align: center; position: relative; display: inline-block; top: auto; left: auto; padding: 0 0 0.357rem; border-bottom: 3px solid #fe473c; background: transparent; text-transform: uppercase; font-weight: bold;">
+    Declaração de Ética e Conduta e Boas Práticas
+</p>
+<p style="text-align: justify;">
+    Os <em>Cadernos do GPOSSHE On-line</em>, dedica-se a cumprir as boas práticas no que diz respeito à conduta moral condizente com a editoração cientifica de periódicos. A prevenção da negligência também é uma responsabilidade crucial do
+    editor e da equipe editorial: qualquer forma de comportamento antiético, bem como o plágio em qualquer instância, não é aceito nos <em>Cadernos do GPOSSHE On-line</em> . Os autores que enviam artigos para a revista declaram que seu
+    conteúdo é original e garantem que o trabalho não foi publicado nem está em processo de revisão/avaliação em nenhum outro periódico. Em cada número. Além disso, <em>os Cadernos do GPOSSHE On-line</em> segue as
+    <a title="COPE" href="https://publicationethics.org/files/Research_institutions_guidelines_final_0_0.pdf" target="_blank" rel="noopener">Boas <em>Práticas e Orientação do Comitê de Publicação e Ética (COPE)</em></a><strong>.</strong>
+</p>
